--- a/engine/sql/core/pom.xml
+++ b/engine/sql/core/pom.xml
@@ -109,6 +109,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.vividsolutions</groupId>
+      <artifactId>jts-core</artifactId>
+      <version>1.14.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.xbean</groupId>
       <artifactId>xbean-asm5-shaded</artifactId>
       <scope>test</scope>
