Inject Shape type into Spark SQL type system

--- a/engine/sql/catalyst/pom.xml
+++ b/engine/sql/catalyst/pom.xml
@@ -71,6 +71,11 @@
       <groupId>org.codehaus.janino</groupId>
       <artifactId>janino</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.vividsolutions</groupId>
+      <artifactId>jts-core</artifactId>
+      <version>1.14.0</version>
+    </dependency>
   </dependencies>
   <build>
     <outputDirectory>target/scala-${scala.binary.version}/classes</outputDirectory>
