Shapefile data source finished, bug exists in json4s library and OSM formats needs further discussion.

--- a/engine/examples/pom.xml
+++ b/engine/examples/pom.xml
@@ -248,6 +248,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <scope>1.1</scope>
+    </dependency>
+    <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>algebird-core_${scala.binary.version}</artifactId>
       <version>0.9.0</version>
