--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -360,6 +360,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>com.typesafe.play</groupId>
+        <artifactId>play-json_2.10</artifactId>
+        <version>2.3.9</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-test-tags_${scala.binary.version}</artifactId>
         <version>${project.version}</version>
